.kubernetes/0-Namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: planet
  labels:
    name: planet
