.kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: planet-frontend
  name: planet-frontend
  namespace: planet
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: planet-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: planet-frontend
    spec:
      containers:
      - image: ${IMAGE}
        imagePullPolicy: Always
        name: planet-frontend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: ghcr-login-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
