.kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: planet-frontend
  name: planet-frontend-service
  namespace: planet
spec:
  selector:
    app: planet-frontend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  sessionAffinity: None
