.kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planet-frontend-ingress
  namespace: planet
spec:
  ingressClassName: traefik
  rules:
  - host: planet.kazan.schleppe.cloud
    http:
      paths:
      - backend:
          service:
            name: planet-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
